--- a/High_Voltage/Base.lproj/Main.storyboard
+++ b/High_Voltage/Base.lproj/Main.storyboard
@@ -173,6 +173,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="plusButton" destination="MPh-F8-oQs" id="nqe-j3-Uqg"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Eul-4P-ayt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -276,7 +279,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="efJ-LJ-xqE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1132" y="178"/>
+            <point key="canvasLocation" x="1103" y="178"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="51I-MS-ghP">
@@ -380,7 +383,7 @@
                     </view>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="1369" y="904"/>
+            <point key="canvasLocation" x="623" y="967"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="gGg-SE-HE9">
@@ -398,7 +401,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uio-1X-Jg3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-350" y="178"/>
+            <point key="canvasLocation" x="-318" y="178"/>
         </scene>
     </scenes>
 </document>
